[package]
name = "wasm-init"
version = "0.2.0"
edition = "2021"
authors = [ "Ruan Pearce-Authers <ruanpa@outlook.com>" ]
description = "Let's pretend that life-before-main exists for Rust targeting WebAssembly"
license = "MIT"
repository = "https://github.com/returnString/wasm-init"

[features]
auto-init = []

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
gensym = "0.1"
paste = "1"

[package.metadata.docs.rs]
targets = [ "wasm32-unknown-unknown" ]
